--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1><a href="http://kyberia.cz/">hello lucky boy</a></h1>
+<title>Kyberia.CZ GIT Repositories</title>
+<frameset cols="*">
+	<frame name="gitweb" src="http://git.kyberia.cz/" />
+</frameset>
+
